Add weather UI base

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,54 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
+    <style name="AppTheme" parent="Theme.AppCompat.Light">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
+
+    <style name="RoundButton" parent="Base.Widget.AppCompat.Button">
+        <item name="android:background">@drawable/round_button</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">8sp</item>
+        <item name="android:layout_gravity">center</item>
+    </style>
+
+    <style name="Font"/>
+
+    <style name="Font.Bold">
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="Font.Bold.Brown">
+        <item name="android:textColor">@color/brown</item>
+    </style>
+
+    <style name="Font.Bold.LightBrown">
+        <item name="android:textColor">@color/brown_light</item>
+    </style>
+
+    <style name="Font.Bold.LightBrown.14">
+        <item name="android:textSize">14sp</item>
+    </style>
+
+    <style name="Font.Bold.LightBrown.18">
+        <item name="android:textSize">18sp</item>
+    </style>
+
+    <style name="Font.Bold.Brown.18">
+        <item name="android:textSize">18sp</item>
+    </style>
+
+    <style name="Font.Bold.Brown.28">
+        <item name="android:textSize">28sp</item>
+    </style>
+
+    <style name="Font.Bold.Brown.78">
+        <item name="android:textSize">78sp</item>
+    </style>
+
 
 </resources>
