--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#FCDAB0</color>
+    <color name="colorPrimaryDark">#FCDAB0</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="brown">#5B4224</color>
+    <color name="brown_dark">#CDA16A</color>
+    <color name="brown_light">#8C6639</color>
+    <color name="white">#ffffff</color>
 </resources>
