--- a/app/src/main/res/layout/fragment_weather.xml
+++ b/app/src/main/res/layout/fragment_weather.xml
@@ -115,7 +115,8 @@
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.75"/>
 
-    <View
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/weatherRecyclerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@color/white"
