--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="dot_selected">#DEA055</color>
     <color name="brown_light">#8C6639</color>
     <color name="white">#ffffff</color>
+    <color name="blue">#4A90E2</color>
 </resources>
